Add _add_notify_full variant with a GDestroyNotify

This is to help introspection with the call-back.

https://bugzilla.gnome.org/show_bug.cgi?id=701446